Squash IE issues

--- a/src/components/GetHelpOpts/GetHelpOpts.css
+++ b/src/components/GetHelpOpts/GetHelpOpts.css
@@ -1,7 +1,6 @@
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     .bigHolder {
-        height: 70%;
         width: 100%;
         margin: 0 0 0 0;
         background-color: red;
