--- a/src/layouts/Page/index.css
+++ b/src/layouts/Page/index.css
@@ -27,6 +27,7 @@ _:-ms-lang(x), .wrapper {
     width: 100%;
     min-height: 50%;
     background-color: yellow;
+    margin: 0 0 -300px 0;
 }
 
 @media only screen and (max-width:575px) {
